<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contenedor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuMain">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/botonAjustes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nombreCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/botonAjustes"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/botonAjustes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:src="@drawable/configuraciones"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreCorreo">

        <Button
            android:id="@+id/botonRanking"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_weight="1"
            android:drawableEnd="@drawable/competitivo"
            android:scaleType="fitEnd"
            android:text="@string/ranking" />

        <Button
            android:id="@+id/botonTest"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_weight="1"
            android:backgroundTint="@color/purple_500"
            android:drawableEnd="@drawable/examen"
            android:text="@string/test" />

        <Button
            android:id="@+id/botonEstadisticas"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_weight="1"
            android:backgroundTint="@color/purple_500"
            android:drawableEnd="@drawable/grafico"
            android:text="@string/estadisticas" />

        <Button
            android:id="@+id/botonTemario"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_weight="1"
            android:backgroundTint="@color/purple_500"
            android:drawableEnd="@drawable/libros"
            android:text="@string/temario" />

        <Button
            android:id="@+id/botonOrtografia"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_weight="1"
            android:backgroundTint="@color/purple_500"
            android:drawableEnd="@drawable/ortografico"
            android:text="@string/ortografia" />

        <Button
            android:id="@+id/botonNoticias"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_weight="1"
            android:backgroundTint="@color/purple_500"
            android:drawableEnd="@drawable/periodico"
            android:text="@string/noticias" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>